--- a/FoodWebsite.html
+++ b/FoodWebsite.html
@@ -7,6 +7,9 @@
     <h1>MEAT</h1>
     <h3>What is MEAT?</h3>
     <p>Meat is animal flesh that is eaten as food.</p>
+    <img src="Code Squad/meat_tray_correct.png" alt="Meat Tray" style="height: 150px;width:250px;"/>
+
+
     <h3>What else is there about meat?</h3>
     <p>Humans have hunted and killed animals for meat since prehistoric times. The advent of civilization allowed the domestication of animals such as chickens, sheep, rabbits, pigs, and cattle. This eventually led to their use in meat production on an industrial scale with the aid of slaughterhouses. </p>
     <h3>Popular Meats</h3>
@@ -22,6 +25,12 @@
         <li>FRIED CHICKEN</li>
         <li>BBQ PORK BUN</li>
     </ul>
+
+    <h2>Sources</h2>
+    <ol>
+        <li><a href= "https://en.wikipedia.org/wiki/Meat">Wikipedia: Meat</a> </li>
+        <li><a href= "https://www.worldatlas.com/articles/meat-consumption-in-america.html">World Atlas: Meat</a></li>
+    </ol>
 
 </body>
 
