--- a/FoodWebsite.html
+++ b/FoodWebsite.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Meat Page</title>
+    <title>Food Website</title>
 </head>
 <Body>
     <h1>MEAT</h1>
     <h3>What is MEAT?</h3>
     <p>Meat is animal flesh that is eaten as food.</p>
-    <img src="Code Squad/meat_tray_correct.png" alt="Meat Tray" style="height: 150px;width:250px;"/>
+    <img src="meat_tray_correct.png" alt="Meat Tray" width="250" height="150"/>
 
 
     <h3>What else is there about meat?</h3>
@@ -28,8 +28,8 @@
 
     <h2>Sources</h2>
     <ol>
-        <li><a href= "https://en.wikipedia.org/wiki/Meat">Wikipedia: Meat</a> </li>
-        <li><a href= "https://www.worldatlas.com/articles/meat-consumption-in-america.html">World Atlas: Meat</a></li>
+        <li><a href= "https://en.wikipedia.org/wiki/Meat" target="_blank" rel="noopener noreferrer">Wikipedia: Meat</a> </li>
+        <li><a href= "https://www.worldatlas.com/articles/meat-consumption-in-america.html" target="_blank" rel="noreferrer noopener">World Atlas: Meat</a></li>
     </ol>
 
 </body>
